# exectl

./: Makefile.am  README.md  README.org  bootstrap.mk  configure.ac
src/apps/: exectl.cc
